@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Dec 2010; Nikoli <nikoli@lavabit.com>
+  +psi-stopspam-0.4.5_pre3375.ebuild:
+  version bump
+
   27 Nov 2010; Nikoli <nikoli@lavabit.com>
   +psi-stopspam-0.4.5_pre3195.ebuild:
   version bump
